--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Chat App Node</title>
+  <title>Document</title>
 </head>
-
 <body>
-  <p>Welcome to the chat app</p>
-
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="js/index.js"></script>
+  <h1>Welcome to the chat app</h1>
+  <ol id="messages"></ol>
+  <form id="message-form" action="">
+    <input type="text" name="message" id="message-text" placeholder="Message"/>
+    <button>Send</button>
+  </form>
+  
+</div>
+<script src="./js/main-bundle.js"></script>
 </body>
-
 </html>
