--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <input type="text" name="message" id="message-text" placeholder="Message"/>
     <button>Send</button>
   </form>
+  <button id="send-location">Send send-location</button>
   
 </div>
 <script src="./js/main-bundle.js"></script>
